# mountains

./: .gitignore  dune  dune-project  graph.ml  loader.ml  matrix.ml  matrix.mli  points.geojson  points.ml  raytrace.ml  relief.ml  tiff.ml  tiff.mli  triangle.ml  viewer.ml  visibility.ml  visibility.mli  web_viewer.ml
.github/workflows/: deploy.yml
data/: Copernicus_DSM_COG_10_N43_00_E008_00_DEM.tif  Copernicus_DSM_COG_10_N43_00_E009_00_DEM.tif  points.geojson
src/lib/: dune  loader.ml  loader.mli  matrix.ml  matrix.mli  points.ml  tiff.ml  tiff.mli  visibility.ml
src/sdl/: dune  graph.ml  reader.ml  viewer.ml
src/web/: IDEAS.txt  compute.c  dune  index.html  inflate.js  inflate.wat  manifest.json  reader.ml  viewer.ml
src/web/service_worker/: dune  service_worker.ml
