(env
 (_
  (js_of_ocaml
   (compilation_mode whole_program))
  (wasm_of_ocaml
   (compilation_mode whole_program))))

(executables (names viewer)
 (libraries mountains yojson brr lwt)
 (modes js wasm)
 (js_of_ocaml
  (javascript_files inflate.js))
 (wasm_of_ocaml
  (javascript_files inflate.js)
  (wasm_files inflate.wat)))

(rule
 (target (dir data))
 (alias all)
 (deps (glob_files ../../data/*))
 (action
  (progn
   (run mkdir %{target})
   (run cp %{deps} %{target}))))

(rule
 (target service_worker.bc.js)
 (alias all)
 (deps service_worker/service_worker.bc.js)
 (action
  (copy %{deps} %{target})))

(alias
 (name all)
 (deps index.html manifest.json icon192.png icon512.png))

(rule
 (alias web)
 (action (run python3 -m http.server -d .))
 (deps index.html data viewer.bc.js viewer.bc.wasm.js service_worker.bc.js manifest.json icon192.png icon512.png compute.wasm))

(rule
 (target compute.wasm)
 (deps compute.c)
 (mode promote)
 (action
  (run clang -Ofast -msimd128 --no-standard-libraries --target=wasm32  -Wl,--no-entry -Wl,--import-memory -Wa,--no-type-check -o %{target} %{deps})))
